--- a/ui/package.json
+++ b/ui/package.json
@@ -31,7 +31,7 @@
     "@notionhq/client": "^2.2.15",
     "@sentry/nextjs": "^8.35.0",
     "@tanstack/react-query": "^4.36.1",
-    "axios": "^1.7.7",
+    "axios": "^1.9.0",
     "chakra-dayzed-datepicker": "^0.3.0",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "crisp-sdk-web": "^1.0.25",
@@ -42,7 +42,7 @@
     "iframe-resizer": "^4.4.5",
     "lodash": "^4.17.21",
     "maplibre-gl": "^4.7.1",
-    "next": "^14.2.16",
+    "next": "14",
     "next-plausible": "^3.12.2",
     "notion-client": "^7.1.6",
     "qs": "^6.13.0",
