chore(upgrade-deps): fix some security issues

--- a/package.json
+++ b/package.json
@@ -80,8 +80,8 @@
     "@semantic-release/git": "10.0.1",
     "@types/node": "^22.17.2",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
-    "@typescript-eslint/parser": "^8.39.1",
-    "@vitest/coverage-v8": "^2.1.9",
+    "@typescript-eslint/parser": "^8.44.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "commander": "^12.1.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.31",
@@ -96,6 +96,7 @@
     "eslint-plugin-unused-imports": "^4.2.0",
     "eslint-plugin-zod": "^1.4.0",
     "exceljs": "^4.4.0",
+    "happy-dom": "^18.0.1",
     "lint-staged": "^15.5.2",
     "node-talisman": "^1.29.22",
     "semantic-release": "22.0.12",
